--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,23 @@
 }
 
 .game{
+  font-size: 30px;
   width: 1000px;
   height: 500px;
   border: 1px black solid;
-  background: #f50ab2;
-background: linear-gradient(270deg, rgba(245, 10, 178, 0.26) 0%, rgba(9, 121, 106, 0.43) 18%, rgba(0, 212, 255, 1) 39%);
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;}
+    @keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .character{
@@ -48,7 +60,10 @@ background: linear-gradient(270deg, rgba(245, 10, 178, 0.26) 0%, rgba(9, 121, 10
 }
 
 button{
-  width: 100px;
+  width: 300px;
+  font-size: 40px;
+  position: absolute;
+  left: 300px;
 }
 
 @keyframes jump{
@@ -59,4 +74,12 @@ button{
 
 .jump{
   animation: jump 1s;
+}
+
+.score {
+    position: absolute;
+    top: 100px;
+    right: 1000px;
+    font-size: 40px;
+    font-weight: bold;
 }
